# csv_comparer

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml  pytest.yml  python-package.yml
csv_compare/: compare.py
csv_test_package/: compare.py  csvfile.py
tests/: test_compare.py  test_csv.py
tests/test_files/: file2.csv  file3.csv
